# wordify-plugin

./: .gitignore  CMakeGraphVizOptions.cmake  CMakeLists.txt  LICENSE  LICENSE.txt  README.md
.github/workflows/: cmake.yml
cmake/modules/: MAM_TargetCompileOptions.cmake
installer/: CMakeLists.txt
installer/linux/: install-wordify.sh  install.sh
resource/: editor_res_dark_scheme.uidesc  editor_res_signal_dark_scheme.uidesc  editor_res_signal_lite_scheme.uidesc  vstgpt_editor.uidesc  win32resource.rc  wordify_editor.uidesc
scripts/linux/: build_release.sh
scripts/mac/: build_release.sh
scripts/win/: build_release.bat
source/: analyse_buffer.cpp  analyse_buffer.h  ara_audio_source.cpp  ara_audio_source.h  ara_document_controller.cpp  ara_document_controller.h  ara_factory_config.cpp  ara_factory_config.h  ara_main_factory.h  ara_playback_renderer.cpp  ara_playback_renderer.h  audio_buffer_management.h  audio_source_analyze_worker.cpp  audio_source_analyze_worker.h  exporter.cpp  exporter.h  global_options_controller.cpp  global_options_controller.h  header_controller.cpp  header_controller.h  hilite_text_button.cpp  hilite_text_button.h  hstack_layout.cpp  hstack_layout.h  list_controller.cpp  list_controller.h  list_entry_controller.cpp  list_entry_controller.h  little_helpers.h  meta_word_data.h  meta_words_audio_modification.cpp  meta_words_audio_modification.h  meta_words_audio_source.cpp  meta_words_audio_source.h  meta_words_clip_controller.cpp  meta_words_clip_controller.h  meta_words_data.h  meta_words_editor_renderer.cpp  meta_words_editor_renderer.h  meta_words_editor_view.cpp  (+68 more)
source/controllers/: list_controller.cpp  list_controller.h  list_entry_controller.cpp  list_entry_controller.h  preferences_controller.cpp  preferences_controller.h  region_controller.cpp  region_controller.h  search_controller.cpp  search_controller.h  spinner_controller.cpp  spinner_controller.h  waveform_controller.cpp  waveform_controller.h
source/views/: hstack_layout.cpp  hstack_layout.h  spinner_view.cpp  spinner_view.h  view_animations.cpp  view_animations.h  waveform_view.cpp  waveform_view.h  word_button.cpp  word_button.h
test/: test_temp_dir.cpp
